force-app/main/default/objects/Partner_Event_Log__c/Partner_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Partner Event Log</label>
    <nameField>
        <displayFormat>PEL-{000000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>