force-app/main/default/objects/Partner_Event_Log__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <formula>IF( ISPICKVAL( Partner_Order__r.Status__c , &apos;Received&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>