force-app/main/default/objects/Partner_Event_Log__c/fields/Partner_Order__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Order</label>
    <referenceTo>Partner_Order__c</referenceTo>
    <relationshipLabel>Partner Event Logs</relationshipLabel>
    <relationshipName>Partner_Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>